--- a/appJZ/index.html
+++ b/appJZ/index.html
@@ -16,10 +16,9 @@
 			}
 		</style>
 	</head>
-
 	<body>
 		<header class="mui-bar mui-bar-nav">
-		    <h1 class="mui-title">标题</h1>
+		    <h1 class="mui-title">我的首页</h1>
 		</header>
 	</body>
 
