--- a/appJZ/index.html
+++ b/appJZ/index.html
@@ -16,10 +16,40 @@
 			}
 		</style>
 	</head>
+	<script type="text/javascript">
+		mui.init()
+	</script>
 	<body>
 		<header class="mui-bar mui-bar-nav">
-		    <h1 class="mui-title">我的首页</h1>
+		    <h1 class="mui-title">标题</h1>
 		</header>
+		<div class="mui-content">
+		    
+		</div>
+		<nav class="mui-bar mui-bar-tab">
+		    <a class="mui-tab-item mui-active" id="index-tb-1">
+		        <span class="mui-icon mui-icon-home"></span>
+		        <span class="mui-tab-label">首页</span>
+		    </a>
+		    <a class="mui-tab-item">
+		        <span class="mui-icon mui-icon-phone" id="sss"></span>
+		        <span class="mui-tab-label">电话</span>
+		    </a>
+		    <a class="mui-tab-item">
+		        <span class="mui-icon mui-icon-email"></span>
+		        <span class="mui-tab-label">邮件</span>
+		    </a>
+		    <a class="mui-tab-item">
+		        <span class="mui-icon mui-icon-gear"></span>
+		        <span class="mui-tab-label">设置</span>
+		    </a>
+		</nav>
+		<script type="text/javascript">
+			mui.openWindow({
+				url:"1.html",
+				id:"sss"
+			});
+		</script>
 	</body>
 
 </html>
