--- a/appJZ/pxb.html
+++ b/appJZ/pxb.html
@@ -141,11 +141,11 @@
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
+					<a href="javascript:;"> 
 						<img class="mui-media-object mui-pull-left" src="images/muwu.jpg">
 						<div class="mui-media-body">
 							木屋
-							<p class='mui-ellipsis'>想要这样一间小木屋，夏天挫冰吃瓜，冬天围炉取暖.</p>
+							<p class='mui-ellipsis'>想要这样1一间小木屋，夏天挫冰吃瓜，冬天围炉取暖.</p>
 						</div>
 					</a>
 				</li>
